--- a/pryStreaingUnicah/pryStreaingUnicah.csproj
+++ b/pryStreaingUnicah/pryStreaingUnicah.csproj
@@ -72,6 +72,12 @@
     <Compile Include="Estudio.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Estudios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Estudios.Designer.cs">
+      <DependentUpon>Estudios.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,6 +103,12 @@
     <Compile Include="Pais.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Paises.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Paises.Designer.cs">
+      <DependentUpon>Paises.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TiposPelicula.cs">
@@ -108,8 +120,14 @@
     <EmbeddedResource Include="Clasificacion.resx">
       <DependentUpon>Clasificacion.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Estudios.resx">
+      <DependentUpon>Estudios.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Paises.resx">
+      <DependentUpon>Paises.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
