--- a/pryStreaingUnicah/pryStreaingUnicah.csproj
+++ b/pryStreaingUnicah/pryStreaingUnicah.csproj
@@ -79,6 +79,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormPerfilModulo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPerfilModulo.Designer.cs">
+      <DependentUpon>FormPerfilModulo.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormVentaPelicula.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -156,6 +162,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormPerfilModulo.resx">
+      <DependentUpon>FormPerfilModulo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormVentaPelicula.resx">
       <DependentUpon>FormVentaPelicula.cs</DependentUpon>
